--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
     </div>
   </header>
   <main>
-    <section class="section">
+    <section class="section section--1">
       <div class="container">
         <h2 class="section__heading">Designed for the future</h2>
         <div class="section__content">
-          <div class="section__image" role="img" aria-label="Designed for the future"></div>
+          <figure class="section__img-mobile">
+            <img src="./images/illustration-editor-mobile.svg" alt="Editor">
+          </figure>
           <div class="section__copy-container">
             <h3 class="section__subheading">Introducing an extensible editor</h3>
             <p class="section__paragraph">Blogr features an exceedingly intuitive interface which lets you focus on one
