--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </div>
   </header>
   <main>
+
     <section class="section section--1">
       <div class="container">
         <h2 class="section__heading">Designed for the future</h2>
@@ -96,20 +97,36 @@
         </div>
       </div>
     </section>
+
+    <section class="section section--2">
+      <div class="container">
+        <div class="section__content section__content--alt">
+          <figure class="section__img-mobile section__img-mobile--show">
+            <img src="./images/illustration-phones.svg" alt="Editor">
+          </figure>
+          <div class="section__copy-container">
+            <h2 class="section__heading section__heading--alt">State of the Art Infrastructure</h2>
+            <p class="section__paragraph section__paragraph--alt"> With reliability and speed in mind, worldwide data
+              centers
+              provide the
+              backbone for ultra-fast connectivity.
+              This ensures your site will load instantly, no matter where your readers are, keeping your site
+              competitive.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   </main>
 
 
 
   <!-- 
-  
+
 
   
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
 
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
 
   Free, open, simple
   Blogr is a free and open source application backed by a large community of helpful developers. It supports
