--- a/index.html
+++ b/index.html
@@ -14,53 +14,55 @@
 <body>
 
   <header class="header">
-    <nav class="navigation container">
-      <img src="./images/logo.svg" alt="Blogr" class="navigation__logo">
-      <div class="navigation__inner">
-        <ul class="navigation__left">
-          <li class="navigation__item">
-            <span class="header__btn--outline">Product</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
-              height="7">
-              <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
-            <ul class="navigation__submenu">
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Overview</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Pricing</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Marketplace</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Features</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Integrations</a></li>
-            </ul>
-          <li class="navigation__item">
-            <span class="header__btn--outline">Company</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
-              height="7">
-              <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
-            <ul class="navigation__submenu">
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">About</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Team</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Blog</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Careers</a></li>
-            </ul>
-          <li class="navigation__item">
-            <span class="header__btn--outline">Connect</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
-              height="7">
-              <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
-            <ul class="navigation__submenu">
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Contact</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Newsletter</a></li>
-              <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">LinkedIn</a></li>
-            </ul>
-          </li>
-        </ul>
-        <div class="navigation__login">
-          <a href="#" class="header__btn header__btn--fourth"><span class="header__btn--outline">Log In</span></a>
-          <a href="#" class="header__btn header__btn--tertiary">Sign Up</a>
+    <nav class="navigation">
+      <div class="container">
+        <img src="./images/logo.svg" alt="Blogr" class="navigation__logo">
+        <div class="navigation__inner">
+          <ul class="navigation__left">
+            <li class="navigation__item">
+              <span class="header__btn--outline">Product</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
+                height="7">
+                <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
+              <ul class="navigation__submenu">
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Overview</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Pricing</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Marketplace</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Features</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Integrations</a></li>
+              </ul>
+            <li class="navigation__item">
+              <span class="header__btn--outline">Company</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
+                height="7">
+                <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
+              <ul class="navigation__submenu">
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">About</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Team</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Blog</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Careers</a></li>
+              </ul>
+            <li class="navigation__item">
+              <span class="header__btn--outline">Connect</span> <svg xmlns="http://www.w3.org/2000/svg" width="10"
+                height="7">
+                <path fill="none" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" /></svg>
+              <ul class="navigation__submenu">
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Contact</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">Newsletter</a></li>
+                <li class="navigation__submenu-item"><a href="#" class="navigation__submenu-link">LinkedIn</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="navigation__login">
+            <a href="#" class="header__btn header__btn--fourth"><span class="header__btn--outline">Log In</span></a>
+            <a href="#" class="header__btn header__btn--tertiary">Sign Up</a>
+          </div>
         </div>
-      </div>
 
-      <div class="navigation__menu">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="navigation__menu">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </nav>
     <div class="header__content">
