--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <script src="./js/webfont.js"></script>
-  <script src="./js/script.js" defer></script>
+  <script src="./js/script-compiled.js" defer></script>
 </head>
 
 <body>
@@ -120,6 +120,31 @@
     </section>
 
 
+    <section class="section section--3">
+      <div class="container">
+        <div class="section__content">
+          <figure class="section__img-mobile">
+            <img src="./images/illustration-laptop-mobile.svg" alt="Laptop">
+          </figure>
+          <div class="section__copy-container">
+            <h3 class="section__subheading">Free, open, simple</h3>
+            <p class="section__paragraph"> Blogr is a free and open source application backed by a large community of
+              helpful developers. It supports
+              features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting
+              tools,
+              and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+            <h3 class="section__subheading">Powerful tooling</h3>
+            <p class="section__paragraph"> Batteries included. We built a simple and straightforward CLI tool that makes
+              customization and deployment a breeze,
+              but
+              capable of producing even the most complicated sites.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   </main>
 
 
@@ -131,14 +156,10 @@
 
 
   Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
 
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze,
-  but
-  capable of producing even the most complicated sites.
+
+  
+
 
   Product
 
