--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="section section--2">
       <div class="container">
         <div class="section__content section__content--alt">
-          <figure class="section__img-mobile section__img-mobile--show">
+          <figure class="section__img-mobile section__img-mobile--2">
             <img src="./images/illustration-phones.svg" alt="Editor">
           </figure>
           <div class="section__copy-container">
@@ -123,7 +123,7 @@
     <section class="section section--3">
       <div class="container">
         <div class="section__content">
-          <figure class="section__img-mobile">
+          <figure class="section__img-mobile section__img-mobile--3">
             <img src="./images/illustration-laptop-mobile.svg" alt="Laptop">
           </figure>
           <div class="section__copy-container">
