--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section class="section section--2">
       <div class="container">
-        <div class="section__content section__content--alt">
+        <div class="section__content section__content--2">
           <figure class="section__img-mobile section__img-mobile--2">
             <img src="./images/illustration-phones.svg" alt="Editor">
           </figure>
@@ -122,7 +122,7 @@
 
     <section class="section section--3">
       <div class="container">
-        <div class="section__content">
+        <div class="section__content section__content--3">
           <figure class="section__img-mobile section__img-mobile--3">
             <img src="./images/illustration-laptop-mobile.svg" alt="Laptop">
           </figure>
