--- a/index.html
+++ b/index.html
@@ -143,44 +143,38 @@
         </div>
       </div>
     </section>
-
+    <footer class="footer">
+      <div class="container footer__inner-container">
+        <figure class="footer__logo">
+          <img src="./images/logo.svg" alt="Blog Logo">
+        </figure>
+        <nav class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__list-item footer__list-item--headline"><a href="#">Product</a></li>
+            <li class="footer__list-item"><a href="#">Overview</a></li>
+            <li class="footer__list-item"><a href="#">Pricing</a></li>
+            <li class="footer__list-item"><a href="#">Marketplace</a></li>
+            <li class="footer__list-item"><a href="#">Features</a></li>
+            <li class="footer__list-item"><a href="#">Integrations</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__list-item footer__list-item--headline"><a href="#">Company</a></li>
+            <li class="footer__list-item"><a href="#">About</a></li>
+            <li class="footer__list-item"><a href="#">Team</a></li>
+            <li class="footer__list-item"><a href="#">Blog</a></li>
+            <li class="footer__list-item"><a href="#">Careers</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__list-item footer__list-item--headline"><a href="#">Connect</a></li>
+            <li class="footer__list-item"><a href="#">Contact</a></li>
+            <li class="footer__list-item"><a href="#">Newsletter</a></li>
+            <li class="footer__list-item"><a href="#">LinkedIn</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
 
   </main>
-
-
-
-  <!-- 
-
-
-  
-
-
-  Free, open, simple
-
-
-  
-
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn -->
 
 </body>
 
